# filmweb_recommendation_system

./: README.md  lint.sh  pyproject.toml  try.py
data/: 1001BestMovies_full_data.pickle  582496_full_data.pickle  79villemo_full_data.pickle  ADAMUS333_full_data.pickle  AdamonatorPL_full_data.pickle  Adsun22_full_data.pickle  AleksandraMarcisz_full_data.pickle  Alen63_full_data.pickle  AllieM_full_data.pickle  Ashigaru44_full_data.pickle  Asu_3.pickle  Asu_3_full_data.pickle  Atricia.pickle  Atricia_full_data.pickle  Avvely.pickle  Avvely_full_data.pickle  Badrek_full_data.pickle  Baranek1234_full_data.pickle  Bedrich_full_data.pickle  BosopopiasQ_full_data.pickle  Christine_G_full_data.pickle  Clary_Fray_71_full_data.pickle  Co_mam_tu_wpisac.pickle  Co_mam_tu_wpisac_full_data.pickle  CreativePhilip_full_data.pickle  CyberRagnar_full_data.pickle  CynicznyWTN_full_data.pickle  DJKwaq_full_data.pickle  DamianoWlkp_full_data.pickle  DariaPlum_full_data.pickle  Davout_full_data.pickle  Dejw__full_data.pickle  Doctor_full_data.pickle  Dziekan_Biochemii_full_data.pickle  EnjoyRainBow_full_data.pickle  Ewela9838_full_data.pickle  FANDAMME_II_full_data.pickle  Feimo_full_data.pickle  Filip777_full_data.pickle  For_Fitter_full_data.pickle  (+433 more)
data/processed/: df1.csv  df2.csv
src/: analysis.ipynb  clean_data.py  data_cleaning.ipynb  data_import.py  fit copy.py  fit.py  full_data_scrapper.ipynb  ratings_clean.ipynb  recommendation_system.ipynb  return.json  show_fitting.ipynb
src/model/: BaseRecommender.py  CBRecommender.py  CFRecommender.py  Recommender.py  UCSRecommender.py  (+2 more)
(+3 files in other folders)
