[tool.poetry]
name = "filmweb-recommendation-system"
version = "0.1.0"
description = ""
authors = [
    "Bogna Jaszczak <you@example.com>",
    "Piotr Rogula <you@example.com>",
    "Rafał Sokołowski <you@example.com>",
    "Bartłomiej Chwiłkowski <you@example.com>",
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.7.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
ipykernel = "^6.19.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
